fix overflow in comment

--- a/app/assets/stylesheets/comments.css
+++ b/app/assets/stylesheets/comments.css
@@ -7,7 +7,8 @@
   padding-right: 15px;
   padding-top: 10px;
   padding-bottom: 10px;
-  overflow: hidden;
+  max-height: 200px;
+  overflow: scroll;
 }
 
 .no-underline {
