--- a/app/assets/stylesheets/follows_modal.css
+++ b/app/assets/stylesheets/follows_modal.css
@@ -19,6 +19,7 @@
 
 .follows-list {
   list-style: none;
+  overflow: scroll;
 }
 
 .follows-list li {
